Gnome-shell: Increase font size to avoid blurry icons

--- a/gnome-shell/gnome-shell.css
+++ b/gnome-shell/gnome-shell.css
@@ -4,7 +4,7 @@
 /* GLOBALS */
 stage {
   font-family: Roboto, Ubuntu, Cantarell, Sans-Serif;
-  font-size: 10pt;
+  font-size: 11pt;
   color: #ADADAD; }
 
 /* WIDGETS */
@@ -230,14 +230,14 @@ StScrollBar {
   .modal-dialog .run-dialog-button-box {
     padding-top: 1em; }
   .modal-dialog .run-dialog-label {
-    font-size: 11pt;
+    font-size: 12pt;
     font-weight: bold;
     color: #949494;
     padding-bottom: .4em; }
 
 .mount-dialog-subject,
 .end-session-dialog-subject {
-  font-size: 13pt; }
+  font-size: 14pt; }
 
 /* Message Dialog */
 .message-dialog-main-layout {
